# deskmd-outlook-addin

./: .gitignore  CLAUDE.md  README.md  commands.js  eslint.config.mjs  index.html  manifest.xml  package-lock.json  package.json  taskpane.html  tsconfig.json  vite.config.ts
.agtx/: execute.md  plan.md  review.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CODE_REVIEW.md  DATA-MODELS.md  EDITOR-STATE-MANAGEMENT.md  EMAIL-INTEGRATION.md  FEATURES.md  FILE_TREE_LAYER_PLAN.md  MARKETING.md  MOBILE_COMPANION.md  PHASES.md  PLAN-filesystem-search.md  PROGRESS.md  QUICKSTART.md  RAG.md  UX-AUDIT.md  plan-enhanced-docs.md  plan.md
outlook-addin/: README.md  commands.html  manifest.xml  package-lock.json  package.json  taskpane.html  taskpane.js
outlook-addin/src/: commands.js
scripts/: migrate-obsidian.ts  release.sh
src/: app.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  lib.rs
src-tauri/src/rag/: db.rs  embeddings.rs  mod.rs
src/app/: app-shell.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
src/components/: error-boundary.tsx  global-search.tsx
src/hooks/: index.ts  use-auto-save.ts  use-context-index-sync.ts  use-context-search.ts  use-deep-link.ts  use-editor-ai-inclusion.ts  use-editor-save-and-close.ts  use-editor-save-shortcut.ts  use-editor-session.ts  use-editor-tab.ts  use-file-watcher.ts  use-grouped-items.ts  use-internal-link-handler.ts  use-open-from-query.ts  use-project-name.ts  (+7 more)
tauri-plugin-mcp/: Cargo.toml  README.md
(+248 files in other folders)
